# browser-use-api

./: .env.example  .gitignore  Dockerfile  QUICK_START_CLI.md  README.md  install.sh  install_cli.sh  pyproject.toml  start.sh  stop.sh
app/: __init__.py  config.py  main.py
app/api/v1/: endpoints.py
app/middleware/: error_handler.py  rate_limit.py
app/models/: request.py  response.py
app/services/: agent_service.py  browser_manager.py
app/utils/: logger.py
cli/: README.md  bro.py  bro.sh  install_alias.sh  requirements.txt
docs/: AGENTS.md
